--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Rdep/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Rdep/Modificar.cshtml
@@ -9,6 +9,35 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
+<script>
+    function Reprocesar()
+    {
+        var datos = {
+            IdEmpresa: $("#IdEmpresa").val(),
+            Id_Rdep: $("#Id_Rdep").val(),
+            IdTransaccionSession: $("#IdTransaccionSession").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("Reprocesar", "Rdep", new { Area = "RRHH" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data)
+            {
+                console.log(data);
+                GridViewPartial_rdep_det.PerformCallback();
+
+            },
+            error: function (error)
+            {
+            }
+        });
+    };
+</script>
 @using (Html.BeginForm("Modificar", "Rdep", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa);
@@ -52,6 +81,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
+                <button type="button" onclick="Reprocesar();" id="btn_reprocesar" class="btn btn-primary">Reprocesar</button>
                 <button type="submit" class="btn btn-primary">Descargar </button>
                 <a class="btn btn-default" href="@Url.Action("Index", "Rdep", new { Area ="RRHH" }, null)">Cancelar</a>
             </div>
