--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ParticipacionUtilidad/_GridViewPartial_utilidades_detalle.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ParticipacionUtilidad/_GridViewPartial_utilidades_detalle.cshtml
@@ -5,26 +5,30 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridViewPartial_utilidades_detalle";
-        settings.CallbackRouteValues = new { Controller = "ParticipacionUtilidad", Action = "GridViewPartial_utilidades_detalle"};
+        settings.CallbackRouteValues = new { Controller = "ParticipacionUtilidad", Action = "GridViewPartial_utilidades_detalle" };
+        settings.KeyFieldName = "IdEmpleado";
+        settings.Width = Unit.Percentage(100);
 
-        settings.Width = Unit.Percentage(99);
+        settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
+        settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "ParticipacionUtilidad", Action = "EditingAddNew", Area = "RRHH" };
+        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "ParticipacionUtilidad", Action = "EditingUpdate", Area = "RRHH" };
+        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "ParticipacionUtilidad", Action = "EditingDelete", Area = "RRHH" };
 
-        settings.KeyFieldName = "IdUtilidad";
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
 
-        //Configuracion responsive
-        settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
-        settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
-        settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
-        settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
-        settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
+        settings.CommandColumn.Visible = true;
+        settings.CommandColumn.ShowNewButton = false;
+        settings.CommandColumn.ShowEditButton = true;
+        settings.CommandColumn.ShowDeleteButton = false;
 
+        settings.SettingsContextMenu.Enabled = true;
+        settings.SettingsBehavior.EnableCustomizationWindow = true;
 
-        
-        settings.Settings.VerticalScrollableHeight = 400;
         settings.SettingsPager.Visible = true;
-        settings.SettingsPager.PageSize = 10;
-        settings.SettingsPager.Mode = GridViewPagerMode.ShowPager;
-        settings.SettingsPager.AlwaysShowPager = true;
+        settings.Settings.ShowGroupPanel = false;
+        settings.SettingsBehavior.AllowSelectByRowClick = true;
 
 
         settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
@@ -46,46 +50,45 @@
             }
         };
 
-        settings.Columns.Add("IdEmpleado", "ID").Width = Unit.Percentage(2);
-        settings.Columns.Add("pe_cedulaRuc", "Cédula").Width = Unit.Percentage(5);
-        settings.Columns.Add("pe_nombre", "Nombres").Width = Unit.Percentage(10);
-        settings.Columns.Add("pe_apellido", "Apellidos").Width = Unit.Percentage(10);
-        settings.Columns.Add("ca_descripcion", "Cargo").Width = Unit.Percentage(10);
+        settings.Columns.Add("IdEmpleado", "ID").Width = Unit.Percentage(4);
+        settings.Columns.Add("pe_cedulaRuc", "Cédula").Width = Unit.Percentage(8);
+        settings.Columns.Add("pe_apellido", "Nombres").Width = Unit.Percentage(15);
+        //settings.Columns.Add("ca_descripcion", "Cargo").Width = Unit.Percentage(10);
         settings.Columns.Add(column =>
         {
             column.FieldName = "em_fechaIngaRol";
             column.Caption = "Fech. ingreso";
-            column.Width = Unit.Percentage(5);
+            column.Width = Unit.Percentage(8);
             column.PropertiesEdit.DisplayFormatString = "d";
         });
         settings.Columns.Add(column =>
         {
             column.FieldName = "em_fechaSalida";
             column.Caption = "Fech. salida";
-            column.Width = Unit.Percentage(5);
+            column.Width = Unit.Percentage(8);
             column.PropertiesEdit.DisplayFormatString = "d";
         });
-        settings.Columns.Add("CargasFamiliares", "#cargas").Width = Unit.Percentage(5);
-        settings.Columns.Add("DiasTrabajados", "#Días").Width = Unit.Percentage(5);
+        settings.Columns.Add("CargasFamiliares", "#cargas").Width = Unit.Percentage(8);
+        settings.Columns.Add("DiasTrabajados", "#Días").Width = Unit.Percentage(8);
         settings.Columns.Add(column =>
         {
             column.FieldName = "ValorIndividual";
             column.Caption = "$ Individual";
-            column.Width = Unit.Percentage(5);
+            column.Width = Unit.Percentage(10);
             column.PropertiesEdit.DisplayFormatString = "c2";
         });
         settings.Columns.Add(column =>
         {
             column.FieldName = "ValorCargaFamiliar";
             column.Caption = "$ Carga";
-            column.Width = Unit.Percentage(5);
+            column.Width = Unit.Percentage(10);
             column.PropertiesEdit.DisplayFormatString = "c2";
         });
         settings.Columns.Add(column =>
         {
             column.FieldName = "ValorTotal";
             column.Caption = "$ Total";
-            column.Width = Unit.Percentage(5);
+            column.Width = Unit.Percentage(10);
             column.PropertiesEdit.DisplayFormatString = "c2";
         });
 
