--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/Nuevo.cshtml
@@ -136,7 +136,8 @@
         var datos = {
             IdEmpresa: $("#IdEmpresa").val(),
             IdTransaccionSession: $("#IdTransaccionSession").val(),
-            IdSucursal: $("#IdSucursal").val()
+            IdSucursal: $("#IdSucursal").val(),
+            IdProceso: $("#IdProceso").val()
         }
         $.ajax({
             type: 'POST',
