--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/Modificar.cshtml
@@ -234,7 +234,8 @@
         var datos = {
             FechaDesde:Fecha_Desde.GetValue(),
             FechaHasta:Fecha_Hasta.GetValue(),
-            IdEmpleado: IdEmpleado.GetValue()
+            IdEmpleado: IdEmpleado.GetValue(),
+            IdTransaccionSession:$("#IdTransaccionSession").val()
 
         }
         $.ajax({
