--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/_GridViewPartial_solicitud_vacaciones_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/_GridViewPartial_solicitud_vacaciones_det.cshtml
@@ -1,12 +1,25 @@
 @using System.Web.UI.WebControls;
 @{
-    var grid = Html.DevExpress().GridView(settings => {
+    var grid = Html.DevExpress().GridView(settings =>
+    {
         settings.Name = "GridViewPartial_solicitud_vacaciones_det";
-        settings.CallbackRouteValues = new { Controller = "Vacaciones", Action = "GridViewPartial_solicitud_vacaciones_det"};
+        settings.CallbackRouteValues = new { Controller = "Vacaciones", Action = "GridViewPartial_solicitud_vacaciones_det" };
 
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdSolicitud";
 
+
+        settings.CommandColumn.Visible = true;
+        settings.CommandColumn.ShowNewButton = true;
+        settings.CommandColumn.ShowEditButton = true;
+        settings.CommandColumn.ShowDeleteButton = true;
+
+        settings.SettingsContextMenu.Enabled = true;
+        settings.SettingsBehavior.EnableCustomizationWindow = true;
+
+        settings.SettingsPager.Visible = true;
+        settings.Settings.ShowGroupPanel = false;
+        settings.SettingsBehavior.AllowSelectByRowClick = true;
 
         //Configuracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
@@ -15,31 +28,7 @@
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
-        //Configuración para que la grilla no muestre texto completo
-        settings.SettingsBehavior.AllowEllipsisInText = true;
-        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
-        settings.Width = Unit.Percentage(100);
-
-        settings.Settings.HorizontalScrollBarMode = ScrollBarMode.Hidden;
-        settings.Settings.VerticalScrollBarMode = ScrollBarMode.Visible;
-        settings.Settings.VerticalScrollableHeight = 400;
-        settings.SettingsPager.Visible = true;
-        settings.SettingsPager.PageSize = 10;
-        settings.SettingsPager.Mode = GridViewPagerMode.ShowPager;
-        settings.SettingsPager.AlwaysShowPager = true;
-
-
-        settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
-        settings.Settings.ShowFilterRow = true;
-        settings.Settings.ShowHeaderFilterButton = true;
-        settings.SettingsBehavior.AllowSelectByRowClick = true;
-
-
-        settings.SettingsExport.EnableClientSideExportAPI = true;
-        settings.SettingsExport.ExcelExportMode = DevExpress.Export.ExportType.WYSIWYG;
-        
-
-       
+        //Funcion para inicializar fila al presionar nuevo
 
         settings.Columns.Add("IdPeriodo_Inicio", "Periodo inicio").Width = System.Web.UI.WebControls.Unit.Percentage(10);
         settings.Columns.Add("IdPeriodo_Fin", "Periodo hasta").Width = System.Web.UI.WebControls.Unit.Percentage(10);
@@ -71,7 +60,7 @@
         });
         settings.Columns.Add("DiasGanado", "Días ganado").Width = System.Web.UI.WebControls.Unit.Percentage(20);
         settings.Columns.Add("DiasTomados", "Días gozado").Width = System.Web.UI.WebControls.Unit.Percentage(20);
-        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
+
     });
 }
 @grid.Bind(Model).GetHtml()
