--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/Consultar.cshtml
@@ -11,6 +11,7 @@
 
 @using (Html.BeginForm("Consultar", "PuntoVenta", FormMethod.Post, new { @class = "form", @rolw = "form" }))
 {
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     @Html.HiddenFor(q => q.IdPuntoVta)
     @Html.HiddenFor(q => q.Nuevo, new { @id = "Nuevo" })
@@ -152,7 +153,15 @@
             </div>
         </div>
     </div>
-
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    @Html.Action("GridViewPartial_puntoventa_usuario")
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="box-footer">
         <a class="btn btn-default" href="@Url.Action("Index", "PuntoVenta", new {   Area = "Facturacion" }, null)">Cancelar</a>
