--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/Modificar.cshtml
@@ -11,6 +11,7 @@
 
 @using (Html.BeginForm("Modificar", "PuntoVenta", FormMethod.Post, new { @class = "form", @rolw = "form" }))
 {
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     @Html.HiddenFor(q => q.IdPuntoVta)
 
@@ -109,7 +110,15 @@
             </div>
         </div>
     </div>
-
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    @Html.Action("GridViewPartial_puntoventa_usuario")
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
